fix: overflow

--- a/source/css/_components/md.styl
+++ b/source/css/_components/md.styl
@@ -17,7 +17,7 @@
   position: relative
   padding-top: 0
   padding-bottom: 2rem
-  overflow: visible
+  overflow: hidden
 
 
 .md-text
